--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -7,7 +7,6 @@
 <link rel='stylesheet' href='/static/css/main.css'>
 <link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-i'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ub'>
-
 </head>
 <body>
 <header>
@@ -15,6 +14,7 @@
 </header>
 <nav>
 <a href='/'>Home</a>
+<a href='/snippet/create'>Create snippet</a>
 </nav>
 <section>
 {{template "body" .}}
